# AyED

AYED-Semana-1/Práctica 1 - Uso de Listas/: Ejercicio1.py  Ejercicio2.py  Ejercicio5.py  Ejercicio7.py
AYED-Semana_1/Práctica 1 - Uso de Listas/: Ejercicio3.py  Ejercicio6.py  Ejercicio9.py
AyED-GUIA-GRUPAL-1/: problema1.py  problema2.py  problema3.py  problema4.py
AyED-Semana-10/SESION 20/FaceApp/: app.py  requirements.txt
AyED-Semana-10/SESION 20/Trees/: arbol1.py  diccionario.py  recursividad.py
AyED-Semana-12/Sesion 24/Grafos/: arbol.py  grafos.py  grafos_exercise.py
AyED-Semana-13/SESION 26/Ejercicios/: ejercicio1.py
AyED-Semana-3/Sesion 6/: principal.py
AyED-Semana-4/: ejercicio1.py
AyED-Semana-5/: principal.py
AyED-Semana-5/SESION 10/controllers/: dao.py
AyED-Semana-5/SESION 11/: lista_enlazadas.py
AyED-Semana-7/SESION 14/: audio1.py
AyED-Semana-8/SESION 17/: pyproject.toml  requeriments.txt
AyED-Semana_3/Funciones_Internas/: ejercicio1.py
AyED-Semana_3/Sesion 5/: ejemplo1.py
AyED_COLAS_SEM9/: README.md  app.py
AyED_COLAS_SEM9/models/: __init__.py
AyED_COLAS_SEM9/templates/: index.html
AyED_COLAS_SEM9/views/: __init__.py  vista.py
AyED_EXPO_SEM_7/: __main__.py
AyED_EXPO_SEM_7/controllers/: controlador_pila.py
AyED_EXPO_SEM_7/models/: pila_sacos.py
AyED_EXPO_SEM_7/views/: vista_pila.py
AyED_SPEECH_IN_WEB/: CHANGELOG.md  app.py  pyproject.toml
AyED_SPEECH_IN_WEB/.github/workflows/: release.yml
AyED_SPEECH_IN_WEB/static/: scripts.js
AyED_SPEECH_IN_WEB/templates/: index.html
AyED_SPEECH_IN_WEB/uploads/: audio_20250514-082243.txt
AyED_SPEECH_UI/controllers/: controlador.py
Clinica-con-audio-y-voz-web/: app.py  requirements.txt
Clinica-con-audio-y-voz-web/controller/: dao.py
Clinica-con-audio-y-voz-web/model/: clas.py
Clinica-con-audio-y-voz-web/static/: script.js  script2.js
Clinica-con-audio-y-voz-web/templates/: index.html  quitar.html
GUIA-DIDACTICA-5_AJCSA/: main.py
GUIA-DIDACTICA-5_AJCSA/controllers/: controlador.py
GUIA-DIDACTICA-5_AJCSA/models/: estacion.py  estructuras.py  estudiante.py  paciente.py  problema1_modelo.py  problema2_modelo.py  problema3_modelo.py  problema4_modelo.py
GUIA-DIDACTICA-5_AJCSA/views/: vista_consola.py
Práctica 1 - Uso de Listas/: Ejercicio10.py  Ejercicio4.py  Ejercicio8.py
(+19 files in other folders)
